syntax = "proto3";

package tools.teal.demoapp.account.v1;

import "tools/teal/demoapp/dto/v1/dto.proto";

message CreateAccount {
  string id = 1; 
  string first_name = 2;
  string last_name = 3;
  string email = 4;
}

message ActivateAccount {
  string account_id = 1; 
}

message AddBillingAddress {
  string account_id = 1;
  tools.teal.demoapp.dto.v1.Address address = 2; 
}

message AddShippingAddress {
  string account_id = 1;
  tools.teal.demoapp.dto.v1.Address address = 2; 
}

message DeleteAccount {
  string account_id = 1;
}

message DeleteBillingAddress {
  string account_id = 1;
  string address_id = 2; 
}

message DeleteShippingAddress {
  string account_id = 1;
  string address_id = 2; 
}

message PreferShippingAddress {
  string account_id = 1;
  string address_id = 2; 
}

message PreferBillingAddress {
  string account_id = 1;
  string address_id = 2; 
}

message AccountCommandsSchema {
  oneof event {
    CreateAccount create_account = 1;
    ActivateAccount activate_account = 2;
    AddBillingAddress add_billing_address = 3;
    AddShippingAddress add_shipping_address = 4;
    DeleteAccount delete_account = 5;
    DeleteBillingAddress delete_billing_address = 6;
    DeleteShippingAddress delete_shipping_address = 7;
    PreferShippingAddress prefer_shipping_address = 8;
    PreferBillingAddress prefer_billing_address = 9;
  }
}
